# chally

./: .gitignore  Makefile  README.md  openapi.json
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml
backend/app/: auth_deps.py  config.py  db.py  logging_setup.py  main.py  security.py
backend/app/jobs/: __init__.py  verify_submission.py
backend/app/models/: __init__.py  challenge.py  ledger.py  review.py  submission.py  user.py  wallet.py
backend/app/routes/: auth.py  challenges.py  feed.py  ledger.py  reviews.py  stripe_webhooks.py  system.py  wallet.py
backend/app/schemas/: auth.py  challenge.py  ledger.py  review.py  submission.py  wallet.py
backend/app/services/: invite_code.py  ledger.py  media.py  overlay.py  slots.py  storage.py  time_windows.py  wallet.py
backend/migrations/: env.py
backend/migrations/versions/: 20250928_0001_create_users.py  20250928_0002_add_username_to_users.py  20250928_0003_create_challenges_and_participants.py  20250928_0004_participant_timezone.py  20250928_0005_create_submissions.py  20250930_0006_create_votes.py  20251001_0007_create_ledger.py  20251001_0008_create_wallet.py  20251001_0009_enable_pgcrypto.py  20251002_0010_wallet_allocations_and_checks.py  20251002_0011_platform_revenue_tracking.py  20251015_0012_add_challenge_images.py  20251016_0013_add_submission_stages_and_multi_photo.py  20251016_0014_update_visibility_system.py  20251016_0015_add_multi_photo_progress.py  7fb50fe021c2_m6_1_acid_hardening_constraints_and_.py
backend/tests/: test_auth.py  test_auth_duplicates.py  test_challenges.py  test_challenges_membership.py  test_join_timezone.py  test_system.py  test_time_windows.py  test_watermark.py
backend/tests/challenge_json/: custom_days_running.json  gym_workout_stages.json  morning_meditation.json  private_accountability_group.json  private_challenge.json  public_challenge.json  unlisted_challenge.json  weekly_flexible_gym.json
backend/tests/scripts/: README.md  test_all.sh  test_auth.sh
docs/: DECISIONS_MVP_vs_PROD.md  README.md
docs/api/: authentication.md  challenges.md  ledger.md  submissions.md  wallet.md
docs/business/: user-guide.md
docs/development/: setup.md
docs/system/: anti-cheat-watermarking.md  challenge-system.md  overview.md  payment-processing.md  platform-revenue.md  security.md  token-economy.md  wallet-system.md
docs/workflows/: challenge-participation.md  user-onboarding.md
infra/: .env.dev.example  compose.dev.yml
mobile/: babel.config.js  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json
mobile/app/: _layout.tsx  auth-mock.tsx  design-system.tsx  health.tsx  index.tsx
mobile/lib/: api.ts  auth.ts  (+3 more)
(+14 files in other folders)
