[project]

name = "peerpush-backend"
version = "0.1.0"
description = "PeerPush backend (FastAPI)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.8",
  "python-json-logger>=2.0.7",
  "structlog>=24.1.0",
  "redis>=5.0.7",
  "rq>=1.16.2",
  "asyncpg>=0.29.0",
  "SQLAlchemy[asyncio]>=2.0.34",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "httpx>=0.27",
]

[tool.pytest.ini_options]
pythonpath = ["app"]
addopts = "-q"