[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "peerpush-backend"
version = "0.1.0"
description = "PeerPush backend (FastAPI)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.8",
  "python-json-logger>=2.0.7",
  "structlog>=24.1.0",
  "redis>=5.0.7",
  "rq>=1.16.2",
  "asyncpg>=0.29.0",
  "SQLAlchemy[asyncio]>=2.0.34",
  "passlib[bcrypt]>=1.7.4",
  "bcrypt>=4.0.0,<5.0.0",
  "PyJWT>=2.9.0",
  "alembic>=1.13.2",
  "email-validator>=2.2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.23",
  "httpx>=0.27",
  "alembic>=1.13",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
addopts = "-q"